@@ -31,10 +31,16 @@ Noteworthy changes in version 2.0.0 (unreleased)
  Context::DecryptionFlags::DecryptListOnly   NEW.
  Context::EncryptionFlags::AddRecipient      NEW.
  Context::EncryptionFlags::ChangeRecipient   NEW.
+ Context::CreationFlags                      NEW.
+ Context::createKey                     CHANGED: New overload; deprecated old.
+ Context::startCreateKey                CHANGED: New overload; deprecated old.
+ Context::createSubkey                  CHANGED: New overload; deprecated old.
+ Context::startCreateSubkey             CHANGED: New overload; deprecated old.
  Error::isError                              NEW.
  Error::isSuccess                            NEW.
  RandomBytesResult                           NEW.
  RandomValueResult                           NEW.
+ Context::createKeyEx                        DEPRECATED.
  Context::startTrustItemListing              REMOVED.
  Context::nextTrustItem                      REMOVED.
  Context::endTrustItemListing                REMOVED.
